<resources>
    <string name="app_name">Prime Number Finder</string>
    <string name="app_version_name">Version %1$s</string>
    <string name="general">General</string>
    <string name="preference_title_allow_background_threads">Allow background tasks</string>
    <string name="preference_summary_allow_background_threads">Allow the app to run tasks in the background (such as searching for prime numbers). Warning: this can cause significant battery loss if you are not careful.</string>
    <string name="privacy">Privacy</string>
    <string name="allow_analytics_title">Usage statistics</string>
    <string name="allow_analytics_description">Allow the app to send anonymous usage statistics to the developer to help improve the app.</string>
    <string name="quick_copy">Quick Copy</string>
    <string name="quick_copy_title">Quick Number Copy</string>
    <string name="quick_copy_description">Hold bolded numbers to copy them to the clipboard.</string>
    <string name="quick_copy_keep_formatting_title">Copy Number Formatting</string>
    <string name="quick_copy_keep_formatting_description">Keep the number formatting when copying numbers.</string>
    <string name="theme">Theme</string>
    <string name="dark_theme_title">Dark Theme</string>
    <string name="dark_theme_description">Use the dark theme.</string>
    <string name="action_bar_item_title_delete">Delete</string>
    <string name="action_bar_item_title_sort">Sort</string>
    <string name="action_bar_item_title_export">Export</string>
    <string name="find_nth_number_title">Find Nth number</string>
    <string name="title_find_primes">Find Primes</string>
    <string name="title_find_factors">Find Factors</string>
    <string name="title_factor_tree">Prime Factorization</string>
    <string name="title_lcm">Least Common Multiple</string>
    <string name="title_gcf">Greatest Common Factor</string>
    <string name="title_saved_files">Saved Files</string>
    <string name="title_settings">Settings</string>
    <string name="title_about">About</string>
    <string name="tasks_tab_title">Tasks</string>
    <string name="results_tab_title">Results</string>
    <string name="thread_count">Threads</string>
    <string name="notify_when_finished">Notify when finished.</string>
    <string name="auto_save">Auto-save when finished.</string>
    <string name="check_primality_button">Check primality</string>
    <string name="input_number_description">Enter a number below to check if it is prime.</string>
    <string name="input_range_description">Enter a range below to search for primes.</string>
    <string name="search_range_inclusive">Search Range (inclusive)</string>
    <string name="to">to</string>
    <string name="infinity_text">infinity</string>
    <string name="find_primes_button">Find primes</string>
    <plurals name="find_primes_subtitle_result">
        <item quantity="one">There is %1$s prime number between %2$s and %3$s.</item>
        <item quantity="other">There are %1$s prime numbers between %2$s and %3$s.</item>
    </plurals>
    <string name="find_primes_subtitle">Searching for prime numbers between %1$s and %2$s using %3$s.</string>
    <string name="find_primes_body_text">Already found %1$s prime numbers.</string>
    <string name="find_primes_body_text_sieve_counting">Counting primes: %1$s.</string>
    <string name="find_primes_body_text_sieve_marking">Marking factors of %1$s&#8230;</string>
    <string name="find_primes_result">%1$s primes found.</string>
    <string name="check_primality_result">%1$s is %2$s.</string>
    <string name="check_primality_result_negative">%1$s is %2$s because it is divisible by %3$s.</string>
    <string name="no_tasks_message">No tasks to display. Start one with the buttons above or the floating action button.</string>
    <string name="no_task_selected_message">Select a task to view its status and results.</string>
    <string name="find_primes_task_list_item_title">Primes from %1$s to %2$s</string>
    <string name="check_primality_subtitle_searching">Checking primality of %1$s.</string>
    <string name="check_primality_task_list_title">Primality of %1$s</string>
    <string name="primes_list_toast_message">%1$s is the %2$s number.</string>
    <string name="find_factors_input_number_description">Enter a number to find its factors.</string>
    <string name="find_factors_button">Find factors</string>
    <string name="find_factors_subtitle">Finding factors of %1$s.</string>
    <string name="find_factors_body_text">Already found %1$s factors.</string>
    <string name="find_factors_result">%1$s factors found.</string>
    <plurals name="find_factors_subtitle_results">
        <item quantity="one">%1$s has %2$s factor.</item>
        <item quantity="other">%1$s has %2$s factors.</item>
    </plurals>
    <string name="find_factors_subtitle_results_extension">This means it is %1$s.</string>
    <string name="find_factors_task_list_item_title">Factors of %1$s</string>
    <string name="factors_list_toast_message">%1$s is the %2$s factor.</string>
    <string name="prime_factorization_input_number_description">Enter a number to find its prime factors.</string>
    <string name="generate_factor_tree_button">Find Prime Factors</string>
    <string name="factor_tree_label">Factor tree</string>
    <string name="prime_factorization_subtitle">Finding prime factors of %1$s.</string>
    <string name="prime_factorization_task_list_item_title">Prime factorization of %1$s</string>
    <string name="prime_factorization_result">%1$s prime factors found.</string>
    <plurals name="prime_factorization_subtitle_results">
        <item quantity="one">%1$s has %2$s prime factor.</item>
        <item quantity="other">%1$s has %2$s prime factors.</item>
    </plurals>
    <string name="lcm_input_description">Enter at least two numbers in the boxes to calculate the least common multiple.</string>
    <string name="calculate_lcm_button">Calculate</string>
    <string name="lcm_task_list_item_title">LCM of %1$s</string>
    <string name="lcm_result">LCM is %1$s.</string>
    <string name="lcm_result_long">The least common multiple of %1$s is %2$s.</string>
    <string name="lcm_subtitle">Finding the least common multiple of %1$s.</string>
    <string name="gcf_input_description">Enter at least two numbers in the boxes to calculate the greatest common factor.</string>
    <string name="calculate_gcf_button">Calculate</string>
    <string name="gcf_task_list_item_title">GCF of %1$s</string>
    <string name="gcf_result">GCF is %1$s.</string>
    <string name="gcf_result_long">The greatest common factor of %1$s is %2$s.</string>
    <string name="gcf_subtitle">Finding the greatest common factor of %1$s.</string>
    <string name="no_saved_files_message">You have no saved files.</string>
    <plurals name="saved_files_count">
        <item quantity="one">You have %1$s saved file.</item>
        <item quantity="other">You have %1$s saved files.</item>
    </plurals>
    <plurals name="selected_item_count">
        <item quantity="one">Selected %1$s/%2$s file.</item>
        <item quantity="other">Selected %1$s/%2$s files.</item>
    </plurals>
    <plurals name="delete_warning">
        <item quantity="one">Are you sure you want to delete this file?</item>
        <item quantity="other">Are you sure you want to delete %1$d selected files?</item>
    </plurals>
    <string name="scroll_to_top">Scroll to top</string>
    <string name="scroll_to_bottom">Scroll to bottom</string>
    <string name="developed_by_description">This application was developed by Tycho Bellers.</string>
    <string name="contact_developer">Contact Developer</string>
    <string name="changelog_title">Changelog</string>
    <string name="new_in_version">New in version %1$s</string>
    <string name="view_old_versions">View Older Versions</string>
    <string name="credits_title">Credits</string>
    <string name="credits_description">Application icons provided by&#160;<a href="https://material.io/icons/">Material Icons</a> and&#160;<a href="https://icons8.com/">Icons8</a>.</string>
    <string name="find_primes_search_method_label">Search Method</string>
    <string name="find_primes_search_method_brute_force">Brute force</string>
    <string name="find_primes_search_method_sieve_of_eratosthenes">Sieve of Eratosthenes</string>
    <string name="statistics_title">Statistics</string>
    <string name="time_remaining">%1$s remaining</string>
    <string name="numbers_per_second">%1$s numbers per second</string>
    <string name="average_numbers_per_second">%1$s average numbers per second</string>
    <string name="primes_per_second">%1$s primes per second</string>
    <string name="average_primes_per_second">%1$s average primes per second</string>
    <string name="start">Start</string>
    <string name="pause">Pause</string>
    <string name="content_description_pause_button">Pause</string>
    <string name="resume">Resume</string>
    <string name="content_description_resume_button">Resume</string>
    <string name="stop">Stop</string>
    <string name="reset">Reset</string>
    <string name="content_description_reset_button">Reset</string>
    <string name="content_description_edit_button">Edit</string>
    <string name="view_all">View all</string>
    <string name="save">Save</string>
    <string name="status_ready">Ready</string>
    <string name="status_searching">Searching&#8230;</string>
    <string name="state_pausing">Pausing&#8230;</string>
    <string name="status_paused">Paused</string>
    <string name="state_resuming">Resuming&#8230;</string>
    <string name="status_stopping">Stopping</string>
    <string name="status_stopped">Stopped</string>
    <string name="status_finished">Finished</string>
    <string name="export_options_title">Export Options</string>
    <string name="file_name">File Name</string>
    <string name="txt_extension">.txt</string>
    <string name="png_extension">.png</string>
    <string name="item_separator">Item Separator</string>
    <string name="item_separator_description">You can use \'\\n\' to insert a new line for custom item separators.</string>
    <string name="new_line_separator">New line</string>
    <string name="custom_separator">Other: </string>
    <string name="export_button">Export</string>
    <string name="progress_dialog_title">Progressing&#8230;</string>
    <string name="format">Format</string>
    <string name="format_numbers_description">Include number formatting</string>
    <string name="error_invalid_number">Invalid number!</string>
    <string name="error_invalid_range">Invalid range!</string>
    <string name="error_invalid_input">Invalid input!</string>
    <string name="error_invalid_configuration">Invalid configuration!</string>
    <string name="unicode_bullet">&#8226;</string>
    <string name="factors_list_multiply_separator">&#160;x&#160;</string>
    <string name="task_progress">%1$s%%</string>
    <string name="saving_file">Saving file&#8230;</string>
    <string name="successfully_saved_file">Successfully saved file.</string>
    <string name="error_saving_file">Error saving file!</string>
    <string name="general_error">An error occurred!</string>
    <string name="loading">Loading&#8230;</string>
    <string name="hex">0x%1$s</string>
    <string name="saved">Saved</string>
    <string name="open_drawer">Open Navigation Drawer</string>
    <string name="close_drawer">Close Navigation Drawer</string>
    <string name="advanced">Advanced</string>
</resources>