<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/find"
        android:orderInCategory="0"
        app:showAsAction="ifRoom"
        android:visible="true"
        android:icon="@drawable/ic_search"
        android:title="@string/find_nth_number_title"/>

    <item
        android:id="@+id/export"
        android:orderInCategory="1"
        app:showAsAction="ifRoom"
        android:visible="true"
        android:icon="@drawable/ic_publish"
        android:title="@string/action_bar_item_title_export"/>

    <item
        android:id="@+id/delete"
        android:orderInCategory="2"
        app:showAsAction="never"
        android:icon="@drawable/ic_delete"
        android:title="@string/action_bar_item_title_delete"/>

</menu>
