<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:minWidth="300dp"
    android:layout_height="match_parent"
    android:clipToPadding="false"
    android:orientation="vertical"
    android:padding="8dp">

    <TextView
        android:id="@+id/title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/export_options_title"
        android:textColor="@color/primary_text"
        android:textSize="18sp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingTop="16dp"
        android:text="@string/file_name"
        android:textColor="@color/primary_text"
        android:textSize="14sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <EditText
            android:id="@+id/file_name"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="start"
            android:imeOptions="actionDone"
            android:includeFontPadding="false"
            android:inputType="textNoSuggestions|textVisiblePassword"
            android:singleLine="true"
            android:textSize="16sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:includeFontPadding="false"
            android:lines="1"
            android:text="@string/txt_extension"
            android:textSize="16sp" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/item_separator"
            android:textColor="@color/primary_text"
            android:textSize="14sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="start"
            android:text="@string/item_separator_description"
            android:textColor="@color/secondary_text"
            android:textSize="12sp" />

        <com.tycho.app.primenumberfinder.ui.CustomRadioGroup
            android:id="@+id/item_separator_radio_group"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <RadioButton
                android:id="@+id/new_line"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/new_line_separator"
                android:textSize="14sp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <RadioButton
                    android:id="@+id/other"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/custom_separator"
                    android:textSize="14sp" />

                <EditText
                    android:id="@+id/item_separator"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="2dp"
                    android:imeOptions="actionDone"
                    android:includeFontPadding="false"
                    android:inputType="textNoSuggestions|textVisiblePassword"
                    android:minWidth="50dp" />

            </LinearLayout>
        </com.tycho.app.primenumberfinder.ui.CustomRadioGroup>
    </LinearLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:text="@string/format"
        android:textColor="@color/primary_text"
        android:textSize="14sp" />

    <CheckBox
        android:id="@+id/include_commas_checkbox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/include_numbers_description" />

    <Button
        android:id="@+id/export_button"
        style="@style/Button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/export_button" />

</LinearLayout>