<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:clipChildren="false"
    android:orientation="vertical"
    android:theme="@style/FindPrimes">

    <!-- Check primality input -->
    <TextView
        android:id="@+id/number_input_label"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:labelFor="@+id/primality_input"
        android:paddingStart="8dp"
        android:paddingEnd="8dp"
        android:text="@string/input_number_description" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:clipChildren="false"
        android:clipToPadding="false"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:paddingStart="8dp"
        android:paddingEnd="8dp">

        <include
            android:id="@+id/primality_input"
            layout="@layout/number_input"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content" />

        <Button
            android:id="@+id/check_primality_button"
            style="@style/Button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/check_primality_button" />

    </LinearLayout>

    <!-- Range input -->
    <TextView
        android:id="@+id/input_range_label"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:labelFor="@+id/editText_input_number"
        android:paddingStart="8dp"
        android:paddingEnd="8dp"
        android:text="@string/input_range_description" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:clipChildren="false"
        android:clipToPadding="false"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:paddingStart="8dp"
        android:paddingEnd="8dp"
        android:weightSum="2">

        <include
            android:id="@+id/search_range_start"
            layout="@layout/number_input"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:text="@string/to" />

        <include
            android:id="@+id/search_range_end"
            layout="@layout/number_input"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content" />

    </LinearLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:paddingStart="8dp"
        android:paddingEnd="8dp">

        <include layout="@layout/advanced_button"/>

        <Button
            android:id="@+id/button_find_primes"
            style="@style/Button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:text="@string/find_primes_button" />

    </RelativeLayout>

</LinearLayout>