<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="48dp"
    android:background="@drawable/task_list_item_background"
    android:elevation="2dp"
    android:orientation="horizontal">

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:paddingStart="8dp"
        android:paddingEnd="4dp"
        android:gravity="center_vertical"
        android:orientation="vertical">

        <TextView
            android:id="@+id/title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ellipsize="end"
            android:gravity="center_vertical"
            android:lines="1"
            android:textSize="14sp" />

        <TextView
            android:id="@+id/task_state"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:lines="1"
            android:ellipsize="end"
            android:textColor="?android:attr/textColorSecondary"
            android:textSize="12sp" />
    </LinearLayout>

    <TextView
        android:id="@+id/search_progress"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_marginEnd="8dp"
        android:gravity="start|center_vertical"
        android:lines="1"
        android:singleLine="true"
        android:textColor="?android:attr/textColorSecondary"
        android:textSize="16sp" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:gravity="end|center_vertical">

        <ImageButton
            android:id="@+id/save_button"
            android:layout_width="40dp"
            android:layout_height="48dp"
            android:background="?android:selectableItemBackground"
            android:contentDescription="@string/save"
            android:src="@drawable/ic_save_white_24dp"
            android:tint="@color/default_button_tint_color_state_list"
            android:visibility="visible" />

        <ImageButton
            android:id="@+id/pause_button"
            android:layout_width="40dp"
            android:layout_height="48dp"
            android:background="?android:selectableItemBackground"
            android:contentDescription="@string/content_description_pause_button"
            android:src="@drawable/ic_pause_white_24dp"
            android:tint="@color/default_button_tint_color_state_list"
            android:visibility="visible" />

        <ImageButton
            android:id="@+id/edit_button"
            android:layout_width="40dp"
            android:layout_height="48dp"
            android:background="?android:selectableItemBackground"
            android:contentDescription="@string/content_description_edit_button"
            android:src="@drawable/ic_mode_edit_white_24dp"
            android:tint="@color/default_button_tint_color_state_list"
            android:visibility="visible" />

        <ImageButton
            android:id="@+id/delete_button"
            android:layout_width="40dp"
            android:layout_height="48dp"
            android:background="?android:selectableItemBackground"
            android:contentDescription="@string/content_description_reset_button"
            android:src="@drawable/ic_delete_white_24dp"
            android:tint="@color/default_button_tint_color_state_list"
            android:visibility="visible" />

    </LinearLayout>

</LinearLayout>