<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:focusableInTouchMode="true"
    android:fitsSystemWindows="false">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:clipChildren="false"
        android:orientation="vertical"
        android:paddingTop="8dp">

        <!-- Check primality input -->
        <TextView
            android:id="@+id/input_number_label"
            style="@style/DefaultText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:labelFor="@+id/primality_input"
            android:paddingEnd="8dp"
            android:paddingStart="8dp"
            android:text="@string/input_number_description" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:clipChildren="false"
            android:clipToPadding="false"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            android:paddingEnd="8dp"
            android:paddingStart="8dp">

            <com.tycho.app.primenumberfinder.ValidEditText
                android:id="@id/primality_input"
                style="@style/NumberInput"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1" />

            <Button
                android:id="@+id/check_primality_button"
                style="@style/Button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/check_primality_button" />

        </LinearLayout>

        <!-- Range input -->
        <TextView
            android:id="@+id/input_range_label"
            style="@style/DefaultText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:labelFor="@+id/editText_input_number"
            android:paddingEnd="8dp"
            android:paddingStart="8dp"
            android:text="@string/input_range_description" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:clipChildren="false"
            android:clipToPadding="false"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            android:paddingEnd="8dp"
            android:paddingStart="8dp">

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:clipChildren="false"
                android:clipToPadding="false"
                android:gravity="center_vertical"
                android:orientation="horizontal"
                android:weightSum="2">

                <com.tycho.app.primenumberfinder.ValidEditText
                    android:id="@+id/search_range_start"
                    style="@style/NumberInput"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1" />

                <TextView
                    style="@style/DefaultText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/to" />

                <com.tycho.app.primenumberfinder.ValidEditText
                    android:id="@+id/search_range_end"
                    style="@style/NumberInput"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1" />

                <ImageButton
                    android:id="@+id/infinity_button"
                    android:layout_width="32dp"
                    android:layout_height="match_parent"
                    android:background="@drawable/ripple_clear"
                    android:contentDescription="@string/include_numbers_description"
                    android:src="@drawable/ic_infinity_white_24dp"
                    android:tint="@color/infinity_button_tint" />

            </LinearLayout>

            <Button
                android:id="@+id/button_find_primes"
                style="@style/Button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/find_primes_button" />

        </LinearLayout>

        <!-- Tab layout-->
        <android.support.design.widget.TabLayout
            android:id="@+id/tab_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp"
            app:tabGravity="fill"
            app:tabMode="fixed" />

        <!-- Main view pager -->
        <android.support.v4.view.ViewPager
            android:id="@+id/view_pager"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:layout_behavior="@string/appbar_scrolling_view_behavior"/>

    </LinearLayout>

</android.support.design.widget.CoordinatorLayout>